--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,6 +28,7 @@
   "content_scripts": [
     {
       "matches": [
+	"*://x.com/*",
         "*://twitter.com/*",
         "*://www.twitter.com/*",
         "*://mobile.twitter.com/*",
